--- a/dada/extras/documentation/pod_source/changes_11_x.pod
+++ b/dada/extras/documentation/pod_source/changes_11_x.pod
@@ -40,6 +40,10 @@ L<https://github.com/justingit/dada-mail/issues/873>
 
 L<https://github.com/justingit/dada-mail/issues/871>
 
+=head3 references to, "http://dadamailproject.com" needs to be changed to, "https://dadamailproject.com"
+
+L<https://github.com/justingit/dada-mail/issues/878>
+
 =head1 Internal Changes 
 
 =head2 Moving Away from MIME::Lite::HTML to MIME::Entity
@@ -999,6 +1003,6 @@ L<https://github.com/justingit/dada-mail/issues/726>
 
 This version has been released almost exclusively to help users/administrators of Dada Mail to more 
 easily comply with the GDPR. 
-More information about what has changed can be found in the included L<GDRP Guide for Dada Mail|http://dadamailproject.com/d/gdpr_guide.pod.html>
+More information about what has changed can be found in the included L<GDRP Guide for Dada Mail|https://dadamailproject.com/d/gdpr_guide.pod.html>
 
 =cut
